--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculo de salários</title>
     <style>
         body{
+            text-align: center;
             background-color: cadetblue;
             color: rgb(4, 4, 71);
 
@@ -43,7 +44,7 @@
 
     novoSalario = salario * aumento
 
-    valor.innerHTML = novoSalario;
+    valor.innerHTML = "seu novo salário será" + novoSalario;
 
     </script>
 </body>
