--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         case 'gerente': aumento = 1.3;
         break;
         case 'presidente': aumento = 1.1;
+        break;
         default: alert("escolha um dos cargos: estagiario, analiste, gerente ou presidente");
     }
 
     novoSalario = salario * aumento
 
-    valor.innerHTML = "seu novo salário será" + novoSalario;
+    valor.innerHTML = "seu novo salário será de " + novoSalario;
 
     </script>
 </body>
