--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     novoSalario = salario * aumento
 
-    valor.innerHTML = "seu novo salário será de " + novoSalario;
+    valor.innerHTML = "Seu novo salário será de " + novoSalario;
 
     </script>
 </body>
